Add qase pytest

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,7 @@ log_format = %(asctime)s %(levelname)s %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
 log_cli=true
 log_level=INFO
-;qs_enabled=true
-;qs_api_token=b857235bba98db61d9a847f7656f3419a5ecd588
-;qs_project_code=TP
-;qs_new_run=true
+qs_enabled=true
+qs_api_token=xxxx
+qs_project_code=TP
+qs_new_run=true
