--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,8 @@
 [pytest]
-;addopts = --headed
 log_format = %(asctime)s %(levelname)s %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
 log_cli=true
 log_level=INFO
 qs_enabled=true
 qs_api_token=xxxx
-qs_project_code=TP
-qs_new_run=true
+qs_project_code=xxxx
